fix bugs on ie

--- a/css/burn.less
+++ b/css/burn.less
@@ -242,6 +242,7 @@ section.container-fluid {
 	.details {
 		color: @color-white;
 		font-size: 1rem;
+		position: relative;
 		address {
 			margin-bottom: 0.2rem;
 		}
@@ -564,7 +565,7 @@ section.container-fluid {
 
 @media (min-width: 992px) {
 	html, body {
-		font-size: 18px;
+		font-size: 14px;
 	}
 	.container {
 		width: 960px;
@@ -576,7 +577,7 @@ section.container-fluid {
 
 @media (min-width: 1200px) {
 	html, body {
-		font-size: 24px;
+		font-size: 18px;
 	}
 	.container {
 		width: 1170px;
